Code and pom cleanup and fix warnings